--- a/source/scss/bootstrap-variables.scss
+++ b/source/scss/bootstrap-variables.scss
@@ -1,42 +1,39 @@
-$enable-grid-classes:                         false;
-$enable-validation-icons:                    false;
-$enable-deprecation-messages:                 false;
+$enable-grid-classes: false;
+$enable-validation-icons: false;
+$enable-deprecation-messages: false;
 $enable-rounded: false;
 $enable-shadows: false;
 
-$theme-colors: ( "primary": #e31837);
+$theme-colors: ("primary": #e31837);
 
 $spacer: 1rem;
 
-$spacers: (
-  0: 0,
-  1: ($spacer * .25),
-  2: ($spacer * .5),
-  3: $spacer,
-  4: ($spacer * 1.5),
-  5: ($spacer * 3),
-  6: ($spacer * 4)
-);
+$spacers: (0: 0,
+    1: ($spacer * .25),
+    2: ($spacer * .5),
+    3: $spacer,
+    4: ($spacer * 1.5),
+    5: ($spacer * 3),
+    6: ($spacer * 4));
 
 $charcoal:#272d37;
 $white: #ffffff;
 $body: #1c191a;
 $lmcu-red: #e31837;
 $lmcu-green:#038750;
-$headings-font-family:        'Montserrat';
-$fa-font-path: "webfonts";
+$headings-font-family: 'Montserrat';
 
-$grid-breakpoints: ( xxs:0, xs: 428px, sm: 576px, md: 768px, lg: 992px, xl: 1200px);
+$grid-breakpoints: (xxs:0, xs: 428px, sm: 576px, md: 768px, lg: 992px, xl: 1200px);
 
-$input-btn-padding-y:         0.6rem;
-$input-btn-padding-x:         1.4rem;
-$input-btn-font-size:         1rem;
+$input-btn-padding-y: 0.6rem;
+$input-btn-padding-x: 1.4rem;
+$input-btn-font-size: 1rem;
 
-$input-btn-focus-width:       3px;
-$input-btn-focus-color:       #f5d505;
-$input-btn-focus-box-shadow:  0 0 0 $input-btn-focus-width $input-btn-focus-color !default;
+$input-btn-focus-width: 3px;
+$input-btn-focus-color: #f5d505;
+$input-btn-focus-box-shadow: 0 0 0 $input-btn-focus-width $input-btn-focus-color !default;
 
-$input-btn-border-width:      0;
+$input-btn-border-width: 0;
 
 $h3-font-size: 0.75rem;
-$headings-margin-bottom:      0;
+$headings-margin-bottom: 0;
