--- a/source/scss/bootstrap-config.scss
+++ b/source/scss/bootstrap-config.scss
@@ -7,26 +7,11 @@
 
 // Vendor
 
-@import "node_modules/bootstrap/scss/vendor/rfs";
+//@import "node_modules/bootstrap/scss/vendor/rfs";
 
 // Deprecate
-@import "node_modules/bootstrap/scss/mixins/deprecate";
+//@import "node_modules/bootstrap/scss/mixins/deprecate";
 @import "node_modules/bootstrap/scss/functions";
 @import "node_modules/bootstrap/scss/variables";
 
 @import "node_modules/bootstrap/scss/mixins";
-@import "node_modules/bootstrap/scss/root";
-@import "node_modules/bootstrap/scss/type";
-@import "node_modules/bootstrap/scss/grid";
-@import "node_modules/bootstrap/scss/forms";
-@import "node_modules/bootstrap/scss/buttons";
-@import "node_modules/bootstrap/scss/transitions";
-@import "node_modules/bootstrap/scss/input-group";
-@import "node_modules/bootstrap/scss/custom-forms";
-@import "node_modules/bootstrap/scss/badge";
-@import "node_modules/bootstrap/scss/alert";
-@import "node_modules/bootstrap/scss/list-group";
-@import "node_modules/bootstrap/scss/close";
-@import "node_modules/bootstrap/scss/modal";
-@import "node_modules/bootstrap/scss/tooltip";
-@import "node_modules/bootstrap/scss/utilities";
