LMCU Website Relaunch Updates

--- a/source/scss/bootstrap-variables.scss
+++ b/source/scss/bootstrap-variables.scss
@@ -21,6 +21,7 @@ $white: #ffffff;
 $body: #1c191a;
 $lmcu-red: #e31837;
 $lmcu-green:#038750;
+$lmcu-blue:#1565ab;
 $headings-font-family: 'Montserrat';
 
 $grid-breakpoints: (xxs:0, xs: 428px, sm: 576px, md: 768px, lg: 992px, xl: 1200px);
