strip out old styles for slider and added new one, term slider settings read from JSON

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,7 +1,8 @@
-@import "no-slider";
+//@import "no-slider";
 @import "bootstrap-variables";
 @import "spacing";
 @import "mixins";
 @import "bootstrap-config"; 
 //@import "old";
+@import "slider";
 @import "loan-calc";
