html and scss changes

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -3,6 +3,6 @@
 @import "spacing";
 @import "mixins";
 @import "bootstrap-config"; 
-//@import "old";
+@import "old";
 @import "slider";
 @import "loan-calc";
