--- a/source/scss/loan-calc.scss
+++ b/source/scss/loan-calc.scss
@@ -133,3 +133,50 @@ $result-text-colour: #272d37;
   }
 }
 
+.con-items{  
+  $p: &;
+
+  &__hd, &__repeater{
+    @include make-row(0);
+    @include mb(2);
+  }
+
+  &__repeater{
+    position: relative;
+
+    &--original #{$p}__delete{
+      display: none;
+    }
+  }
+
+  &__delete{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    transform: translateY(-50%);
+    top: 50%;
+    right: -15px;
+    background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 4a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v2h4a1 1 0 1 1 0 2h-1.069l-.867 12.142A2 2 0 0 1 17.069 22H6.93a2 2 0 0 1-1.995-1.858L4.07 8H3a1 1 0 0 1 0-2h4V4zm2 2h6V4H9v2zM6.074 8l.857 12H17.07l.857-12H6.074z' fill='%230D0D0D'/%3E%3C/svg%3E");
+  }
+}
+
+.con-item{
+  padding-right: 1rem;
+  
+
+  .form-control{
+    border: 2px solid #1c191a;
+    padding: 0.375rem;
+    height: 100%;
+  }
+
+  &--type {
+    flex: 1;
+  }
+  
+  &--balance,
+  &--repayment {
+    @include make-col(3);
+  }
+}
+
