--- a/source/scss/loan-calc.scss
+++ b/source/scss/loan-calc.scss
@@ -20,6 +20,7 @@ $result-text-colour: #272d37;
 
   &__inner{
     @include make-row(0);
+    align-items: flex-start;
   }
   &__left{
     @include make-col-ready(0);
@@ -143,6 +144,7 @@ $result-text-colour: #272d37;
 
   &__repeater{
     position: relative;
+    @include mb(3);
 
     &--original #{$p}__delete{
       display: none;
@@ -160,13 +162,17 @@ $result-text-colour: #272d37;
   }
 }
 
-.con-item{
-  padding-right: 1rem;
-  
-
-  .form-control{
+.con-calc-input{
+  .form-control {
     border: 2px solid #1c191a;
     padding: 0.375rem;
+  }
+}
+
+.con-item{
+  padding-right: 1rem;
+
+  .form-control{
     height: 100%;
   }
 
@@ -180,3 +186,47 @@ $result-text-colour: #272d37;
   }
 }
 
+.con-repayment{
+  @include make-row(0);
+  @include my(4);
+  @include py(4);
+  border-bottom: 1px solid #dee2e6;
+  border-top: 1px solid #dee2e6;
+
+  &__label{
+    @include make-col-ready();
+    @include make-col(12);
+
+    @include media-breakpoint-up(md) {
+      @include make-col(8);
+    }
+
+    padding-right: 5px;
+    padding-left: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__total{
+    @include make-col-ready();
+    @include make-col(5);
+    @include mt(3);
+    
+    .form-control {
+      width: 100%;
+    }
+  
+    @include media-breakpoint-up(md) {
+      @include make-col(4);
+      @include mt(0);
+    }
+  }
+
+  &__help-txt{
+    font-size: 80%;
+    color: #6c757d;
+    line-height: 1.5;
+    font-weight: 400;
+    margin-bottom: 0;
+  }
+}
