--- a/source/scss/loan-calc.scss
+++ b/source/scss/loan-calc.scss
@@ -2,7 +2,6 @@ $result-bg-colour: #c4d9e5;
 $result-text-colour: #272d37;
 
 .calc{
-
   &__sliders{
     margin-top: 3rem;
   }
@@ -266,7 +265,8 @@ $result-text-colour: #272d37;
       }
     }
   }
+}
 
-
-
+.d-none {
+  display: none;
 }
